fix typewriter overlapping

--- a/css/sass/_fonts.scss
+++ b/css/sass/_fonts.scss
@@ -27,6 +27,3 @@ html {
     }
 }
 
-html {
-    font-family: Arial, Helvetica, sans-serif;
-}
